--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -18,11 +18,20 @@
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="file" type="file">
     </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io-stream/0.9.1/socket.io-stream.js"></script>
     <script>
       const socket = io();
+      const stream = ss.createStream();
+      document.querySelector('#file').addEventListener('change', event => {
+        console.log('file')
+        const file = event.target.files[0];
+        const stream = ss.createStream();
+        ss(socket).emit('file', stream, {size: file.size});
+        ss.createBlobReadStream(file).pipe(stream);
+      });
       document.querySelector('form').addEventListener('submit', event => {
         event.preventDefault();
         socket.emit('chat message', document.querySelector('#m').value);
